Updated files and added new assets

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -24,7 +24,7 @@ Comprix - Blog
                 <div class="image-container">
                     <img src="{{ url_for('static', filename='images/blog1.png') }}">
                 </div>
-                <h2>The Future of Grocery Shopping:<br>Savings, Sustainability, and Convenience All in One!</h2>
+                <h2>The Future of Grocery Shopping: Savings, Sustainability, and Convenience All in One!</h2>
                 <p>Grocery shopping has evolved, and in the digital age, it's not just about buying food anymore. It's about making informed choices, finding the best deals, and ensuring that our purchases have the least negative impact on the planet. Enter Comprix, a revolutionary platform that's changing the way we think about online grocery shopping.</p>
                 <button class="read-more-mobile">Read More</button>
                 <div class="hide-content-mobile">
