--- a/static/style.css
+++ b/static/style.css
@@ -79,6 +79,11 @@
     background: linear-gradient(135deg, #153677, #4e085f);
     padding: 10px;
   }*/
+  .container {
+    width: 80%;
+    margin: auto;
+    /* Add more styles if needed */
+}
 .shopping-list{
     width: 100%;
     max-width: 540px;
@@ -103,7 +108,7 @@
     justify-content: space-between;
     background: #edeef0;
     border-radius: 30px;
-    padding-left: 20px;
+    padding-left: 20px;    
     margin-bottom: 25px;
   }
   input{
@@ -295,6 +300,38 @@ nav .fa{
     display: none;
 }
 
+/* displaying the AISLES */
+.centered-title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.category-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 50px;
+}
+
+.category-item {
+    width: 15%; /* Adjust width to fit 5 items per line */
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.category-image {
+    width: 100%;
+    height: auto; /* Keep the aspect ratio */
+}
+
+.category-name {
+    margin-top: 10px;
+}
+
+.container, .category-container, .shopping-list, .nav-links ul {
+    width: 87%; /* Full width on smaller screens */
+}
+
 /*correcting for mobile devices (below 700px)*/
 @media(max-width: 700px){
     .text-box h1{
@@ -329,6 +366,26 @@ nav .fa{
 
     .nav-links ul{
         padding: 30px;
+    }
+
+    .category-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between; /* This will space out the items evenly */
+        margin: 0 auto; /* Center the container */
+        padding: 0 15px; /* Add padding to the left and right */
+    }
+
+    .category-item {
+        width: 50%; /* Set width to 50% for two items per line */
+        box-sizing: border-box; /* Include padding and border in the element's width */
+        padding: 13px; /* Optional padding for spacing between items */
+    }
+
+    /* Adjust image size within category items if necessary */
+    .category-image {
+        width: 100%; /* Ensure the image takes the full width of its container */
+        height: auto; /* Maintain aspect ratio */
     }
 }
 
@@ -748,3 +805,5 @@ nav .fa{
     background-color: #f44336;
     color: #fff;
 }
+
+
