--- a/static/style_landing.css
+++ b/static/style_landing.css
@@ -8,7 +8,7 @@
 .header_landing {
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)), url(images/banner.png);
+    background-image: linear-gradient(rgba(4,9,30,0.4),rgba(4,9,30,0.4)), url(images/banner_canva2.png);
     background-position: center;
     background-size: cover;
     position: relative;
@@ -113,6 +113,9 @@ nav .fa{
 
 /*correcting for mobile devices (below 700px)*/
 @media(max-width: 700px){
+    .header_landing {
+        background-image: linear-gradient(rgba(4,9,30,0.4),rgba(4,9,30,0.4)), url(images/banner_canva_mobile.png);
+    }
     .text-box h1{
         font-size: 20px;
     }
@@ -425,3 +428,132 @@ footer h3:hover::after {
         flex-basis: 100%;
     }
 }
+
+/*POP UP*/
+/*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+/*.container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
+}
+/*.btn{
+    padding: 10px 60px;
+    background: #fff;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    font-size: 22px;
+    font-weight: 500;
+    border-radius: 30px;
+}*/
+.popup{
+    width: 350px;
+    height: 350px;
+    background: #fff;
+    border-radius: 6px;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0.1);
+    text-align: center;
+    padding: 0 30px 30px;
+    color: #333;
+    visibility: hidden;
+    transition: transform 0.4s, top 0.4s;
+    margin-top: 40px;
+}
+.open-popup{
+    visibility: visible;
+    top: 50%;
+    transform: translate(-50%,-50%) scale(1);
+}
+
+.popup .close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.popup img{
+    width: 80px;
+    margin-top: -50px;
+    /*border-radius: 50%;*/
+}
+.popup h2{
+    font-size: 20px;
+    font-weight: 400;
+    margin: 20px 0 10px; 
+}
+.popup p{
+    font-size: 14px;
+    color: #000;
+    font-weight: 300;
+    margin: 20px 0 10px; 
+}
+.popup button{
+    width: 70%;
+    margin-top: 100px;
+    padding: 10px 0;
+    background: #f44336;
+    /*background: #6fd649;*/
+    color: #fff;
+    border: 0;
+    outline: none;
+    font-size: 14px;
+    /*border-radius: 4px;*/
+    cursor: pointer;
+    /*box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);*/
+}
+
+
+/*filling in the zip code*/
+.popup .row {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #edeef0;
+    border-radius: 70px;
+    padding-left: 20px;    
+    margin-bottom: 25px;
+  }
+
+input {
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+    padding: 10px;
+    font-weight: 14px;
+  }
+
+/*scroller*/
+.custom-scroll {
+    max-height: 100px; /* Adjust the height as needed */
+    overflow-y: auto; /* Enables vertical scrollbar if content overflows */
+    overflow-x: hidden; /* Hides horizontal scrollbar */
+}
+
+/*the suctom scrolls below dont work*/
+.custom-scroll::-webkit-scrollbar {
+    width: 10px; /* Width of the scrollbar */
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+    background: #888; /* Color of the scroll thumb */
+    border-radius: 5px; /* Rounded corners of the scroll thumb */
+}
+
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+    background: #555; /* Color of the scroll thumb on hover */
+}
+
