--- a/templates/landing.html
+++ b/templates/landing.html
@@ -35,7 +35,7 @@
             <button type="submit" class="hero-btn" onclick="openPopup()">GET STARTED</button>
             <div class="popup" id="popup">
                 <span class="close-btn" onclick="closePopup()">&times;</span>
-              <img src="{{ url_for('static', filename='images/location.png') }}">
+              <img src="{{ url_for('static', filename='images/location_avocado.png') }}">
               <h2>Where do you want to shop?</h2>
               <!--<input type="text" id="input-box" placeholder="Please enter your ZIP code">-->
               <div class="row">
