--- a/templates/category_page.html
+++ b/templates/category_page.html
@@ -9,12 +9,13 @@ Comprix - {{ category_name }}
     <h2 class="centered-title">{{ category_name }}</h2>
     <div class="subcategory-container">
         {% for subcategory in subcategories %}
-            <div class="subcategory-item">
+            <a href="{{ url_for('subcategory_page', subcategory_name=subcategory.name) }}" class="subcategory-item">
                 <img src="{{ url_for('static', filename='images/Products/Subcategories/' + subcategory.image) }}" alt="{{ subcategory.name }}" class="subcategory-image">
                 <p class="subcategory-name">{{ subcategory.name }}</p>
-            </div>
+            </a>
         {% endfor %}
     </div>
+    
 </section>
 {% endblock %}
 
