--- a/templates/landing.html
+++ b/templates/landing.html
@@ -14,7 +14,7 @@
     <body>
         <section class="header_landing">
             <nav class="nav">
-                <a href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='images/logo_small.png') }}" class="logo-img"></a>
+                <a href="{{ url_for('landing') }}"><img src="{{ url_for('static', filename='images/logo_small_beta.png') }}" class="logo-img"></a>
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i> 
                     <ul>
