--- a/templates/subcategory_page.html
+++ b/templates/subcategory_page.html
@@ -5,13 +5,22 @@ Comprix - {{ subcategory_name }}
 {% endblock %}
 
 {% block content %}
+ <!--<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="{{ url_for('shopping_list') }}#categories">All Categories</a></li>
+      <li class="breadcrumb-item"><a href="{{ url_for('category_page', category_name=category_name) }}">{{ category_name }}</a></li>
+      <li class="breadcrumb-item active" aria-current="page">{{ parent_subcategory_name }}</li>
+    </ol>
+  </nav>-->
+  
 <section class="subcategory2">
     <h2 class="centered-title">{{ subcategory_name }}</h2>
     <div class="subcategory2-container">
         {% for item in subcategory2_items %}
             <div class="subcategory2-item">
                 <!-- Display the item image or a placeholder if the image file does not exist -->
-                <img src="{{ url_for('static', filename='images/Products/Subcategory2/' + item.image) }}" onerror="this.onerror=null; this.src='{{ url_for('static', filename='images/placeholder.png') }}'" alt="{{ item.name }}" class="subcategory2-image">
+                <!--Desactivate it for a moment!!!
+                <img src="{{ url_for('static', filename='images/Products/Subcategory2/' + item.image) }}" onerror="this.onerror=null; this.src='{{ url_for('static', filename='images/placeholder.png') }}'" alt="{{ item.name }}" class="subcategory2-image">-->
                 <p class="subcategory2-name">{{ item.name }}</p>
             </div>
         {% endfor %}
