--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
 
     <section class="footer_pages">
         <h4>Contact Us</h4>
-        <p>Lorem ipsum</p>
+        <!--<p>Lorem ipsum</p>-->
         <div class="icons">
             <i class="fab fa-facebook-f"></i>
             <i class="fab fa-instagram"></i>
