Updated files and added new assets

--- a/templates/coming_soon.html
+++ b/templates/coming_soon.html
@@ -5,7 +5,7 @@ Comprix - Coming Soon
 {% endblock %}
 
 {% block content %}
-<div id="main-content" style="text-align:center; padding: 170px;">
+<section class="coming-soon">
     <h2>Exciting Feature Coming Soon!</h2>
     <br>
     <p>Welcome to ComPrix. We're fine-tuning an innovative comparison results feature to enhance your experience. It's not ready just yet, but we're working hard to launch it soon!</p>
@@ -30,7 +30,7 @@ Comprix - Coming Soon
     <br>
     <p>Best,<br>
     The ComPrix Team</p>
-</div>
+</section>
 
 <script>
     function showThankYouMessage() {
