--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,7 +18,7 @@
                 <div class="nav-links" id="navLinks">
                     <i class="fa fa-times" onclick="hideMenu()"></i> 
                     <ul>
-                        <li><a href="{{ url_for('shopping_list') }}">Price Comparison Tool</a></li>
+                        <li><span class="nav-link" onclick="openPopup()">Price Comparison Tool</span></li>
                         <li><a href="{{ url_for('recipes') }}">Recipes & Substitutes</a></li>
                         <li><a href="">Sustainability & Health Badges</a></li>
                         <li><a href="{{ url_for('blog') }}">Blog</a></li>
